# youos

./: .clawhubignore  .gitignore  CHANGELOG.md  CHANGELOG_FOR_CLAWHUB_0.1.14.md  CHANGELOG_SINCE_YESTERDAY.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  PUBLISHING.md  README.md  SKILL.md  clawhub.json  pyproject.toml  round4_prompt.txt  round5_prompt.txt  round6_prompt.txt  youos_config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
.herenow/: state.json
app/: cli.py  main.py
app/agent/: __init__.py  actions.py  adjudicate.py  alerts.py  calendar.py  calendar_events.py  calibration.py  digest.py  digest_html.py  digest_tasks.py  escalation.py  event_store.py  feedback_capture.py  followups.py  gmail_label_sync.py  inbox_fetch.py  meeting_confirm.py  needs_reply.py  nl_rule.py  outcome_capture.py  push.py  rules.py  scheduler.py  send.py  status_labels.py  store.py  summary_grounding.py  thread_summary.py  threshold_tuner.py  triage.py  wire_digest.py
app/api/: agent_routes.py  facts_routes.py  feedback_routes.py  gmail_push_routes.py  history_routes.py  review_queue_routes.py  routes.py  sender_routes.py  stats_routes.py  stream_routes.py
app/autoresearch/: mutator.py  optimizer.py  run_log.py  scorer.py
app/core/: atomic_io.py  auth.py  cold_outreach.py  completion.py  config.py  data_safety.py  diff.py  doctor.py  embeddings.py  facts_extractor.py  feature_flags.py  intent.py  model_server.py  pair_quality.py  proc_lock.py  query_expansion.py  rate_limit.py  reranker.py  secure_io.py  sender.py  service.py  settings.py  stats.py  text_utils.py  urgency.py
app/db/: bootstrap.py
app/evaluation/: model_compare.py  promotion.py  real_mail_eval.py  replay.py  service.py  triage_eval.py  voice_match.py
app/generation/: service.py  verify.py
app/ingestion/: adapters.py  gmail_threads.py  gmail_watch.py  gmail_write.py  google_docs.py  models.py  whatsapp.py
app/retrieval/: service.py
configs/: persona.yaml  persona_analysis.json  prompts.yaml  retrieval.yaml  triage_corpus.jsonl
configs/benchmarks/: golden.yaml
configs/retrieval/: defaults.yaml
docs/: AGENT_OPERATIONS.md  AGENT_SAFETY_MODEL.md  ARCHITECTURE.md  AUDIT_2026-05.md  AUTONOMY_ROADMAP.md  DIGEST_DESIGN.md  INTEGRATIONS.md  OPERATIONS.md  README.md  RELEASE_GUARDRAILS.md  REMOTE_ACCESS.md  THE_WIRE.md  USAGE.md  demo-script.md  schema.sql
docs/landing/: index.html
examples/: README.md  telegram_bot.py
extension/: README.md  background.js  build-firefox.sh  content.js  manifest.firefox.json  manifest.json  options.html  options.js
instances/baher/: MASTER_PLAN.md  program.md
integrations/gmail-addon/: Code.gs  README.md  appsscript.json
screenshots/: CAPTURE.md  capture_draft_shot.py  capture_screenshots.py  seed_demo_instance.py
scripts/: analyze_persona.py  analyze_persona_merge.py  backfill_draft_events_sender_type.py  bootstrap_db.py  build_docs.py  build_sender_profiles.py  clean_reply_pairs.py  compare_bases.py  deduplicate_corpus.py  draft_reply.py  eval_triage.py  eval_triage_corpus.py  export_feedback_jsonl.py  extract_auto_feedback.py  finetune_lora.py  generate_benchmarks.py  index_embeddings.py  ingest_gmail_threads.py  ingest_google_docs.py  install.sh  nightly_pipeline.py  prepare_clawhub_release.sh  replay_backtest.py  report_ingestion_health.py  restart_youos.sh  run_autoresearch.py  run_eval.py  run_finetune_chain.py  run_golden_eval.py  run_youos.sh  seed_benchmarks.py  setup_wizard.py  teardown.py  triage_demo.py  youos_cli.py
site/: CNAME  chat-demo.html  index.html
static/: bookmarklet.js  youos.css  youos.js
templates/: about.html  bookmarklet.html  digests.html  draft_popup.html  feedback.html  login.html  onboarding.html  rules.html  settings.html  stats.html  triage.html
tests/: test_abstain_gating_b188.py  test_account_isolation.py  test_adapter_path.py  test_adapter_promotion.py  test_adaptive_decoding.py  test_adjudicate.py  test_agent_actions.py  test_agent_calendar.py  test_agent_digest.py  test_agent_digest_tasks.py  test_agent_followups.py  test_agent_gmail_label_sync.py  test_agent_inbox_fetch.py  test_agent_needs_reply.py  test_agent_nl_rule.py  test_agent_routes.py  test_agent_rules.py  test_agent_scheduler.py  test_agent_store.py  test_agent_thread_summary.py  test_agent_triage.py  test_agent_webhook.py  test_alerts.py  test_api_token.py  test_ascii_bias_sweep_b257.py  test_atomic_secure_writes_b240.py  test_atomic_state_writes_b241.py  test_atomic_train_adapter_b163.py  test_auth.py  test_auth_store_bounds_b155.py  test_auto_feedback.py  test_auto_feedback_corpus_b160.py  test_auto_feedback_lookback.py  test_auto_send.py  test_autoresearch_cost_b168.py  test_autoresearch_draft_weighting.py  test_autoresearch_instance_paths.py  test_autoresearch_log.py  test_autoresearch_new_surfaces.py  test_autoresearch_robustness.py  (+200 more)
(+28 files in other folders)
