[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youos"
version = "0.2.0b163"
description = "Your personal AI email copilot — learns your writing style from Gmail and drafts replies that sound like you."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DrBaher" }]
keywords = ["email", "drafting", "personal-ai", "local-model", "self-improving", "privacy", "apple-silicon", "mlx", "lora"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Email",
  "Topic :: Office/Business",
]
dependencies = [
  # Web framework pinned with tight upper bounds (was `fastapi<1.0`, starlette
  # unlisted): an unpinned minor bump broke CI on 2026-06-17 — newer Starlette
  # puts `_IncludedRouter` wrappers (no `.path`) in `app.routes`. `starlette` is
  # listed explicitly because fastapi pulls it transitively and it was the actual
  # drift. Bump these deliberately, not via silent resolution.
  "fastapi>=0.115,<0.137",
  "starlette>=0.37,<1.2",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "pyyaml>=6.0.2,<7.0",
  "sqlmodel>=0.0.22,<0.1",
  "httpx>=0.27,<1.0",
  "python-dotenv>=1.0,<2.0",
  "typer>=0.12,<1.0",
  "rich>=13.0,<14.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0"
]
# Browser UI smoke tests (tests/test_ui_smoke.py). Opt-in: those tests skip
# unless YOUOS_UI_TESTS=1 AND this extra is installed (plus `playwright install
# chromium` to fetch the browser). Kept out of `dev` so the default fast test
# run / CI never needs a browser. See tests/test_ui_smoke.py.
uitests = [
  "playwright>=1.40,<2.0"
]
# Cross-encoder reranker (off by default via `reranker_enabled: false` in
# retrieval/defaults.yaml). Installing this extra is the precondition for
# flipping that flag on — without it the reranker module logs a warning and
# falls back to FTS+semantic order. See app/core/reranker.py.
reranker = [
  "sentence-transformers>=2.2,<4.0"
]
# Native Google-API ingestion backend (an alternative to the `gog`/`gws`
# CLIs). Installing this extra is the precondition for
# `ingestion.google_backend: native`; without it, NativeSource raises a clear
# error pointing here. See app/ingestion/adapters.py (NativeSource).
google = [
  "google-api-python-client>=2.100,<3.0",
  "google-auth-oauthlib>=1.2,<2.0",
  "google-auth>=2.30,<3.0"
]
# Local model on Apple Silicon. MLX is the on-device generation/fine-tuning
# engine — required for the local model, but Apple-Silicon-only, so it's an
# extra rather than a base dep. `scripts/install.sh` installs it automatically
# on Apple Silicon; without it, generation falls back to the cloud/Ollama model.
mlx = [
  "mlx-lm>=0.18,<1.0"
]
# Dedicated semantic-embedding runtime (b180). The default embedder
# (`intfloat/multilingual-e5-small`, a multilingual XLM-RoBERTa retrieval model)
# is loaded + encoded via `mlx_embeddings` on Apple Silicon (MLX/Metal).
# Installing this extra is the precondition for the dedicated-embedder path in
# `app/core/embeddings.py`; without it that path raises a clear "pip install
# mlx-embeddings" error and the system either uses a causal-LM embedder (if one
# is configured) or falls back to FTS5-only retrieval.
#
# NOTE: `mlx-embeddings` is GPL-3 licensed and is used as an optional, separately
# installed *runtime* dependency only (never bundled/redistributed with YouOS),
# mirroring the `reranker`/`google` extras. It also pulls a heavy transitive tree
# (datasets, mlx-vlm, opencv), so it is intentionally NOT a base dependency.
embeddings = [
  "mlx-embeddings>=0.1,<1.0"
]

[project.urls]
Homepage = "https://github.com/DrBaher/youos"
Repository = "https://github.com/DrBaher/youos"
Changelog = "https://github.com/DrBaher/youos/blob/main/CHANGELOG.md"

[project.scripts]
youos = "app.cli:app"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 160
target-version = "py311"
# Dev-only landing-page capture tooling (seed a throwaway demo instance + drive
# Playwright). Intentionally imports app modules after setting YOUOS_DATA_DIR, so
# the standard import-order rules don't apply; not shipped in the package.
extend-exclude = ["screenshots/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
